--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "slushgenerator"
   ],
   "devDependencies": {
+    "browser-sync": "^2.4.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.6",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-cache": "^0.2.8",
     "gulp-concat": "^2.5.2",
