--- a/templates/package.json
+++ b/templates/package.json
@@ -2,8 +2,9 @@
   "name": "<%= appNameSlug %>",
   "version": "0.1.0",
   "devDependencies": {
+    "browser-sync": "^2.4.0",
     "del": "^1.1.1",
-    "gulp": "^3.8.6",
+    "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-cache": "^0.2.8",
     "gulp-concat": "^2.5.2",
@@ -16,6 +17,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
+    "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
