--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/KevinOrfas/slush-reloader-generator.git" 
+    "url": "git://github.com/KevinOrfas/slush-reloader-generator.git"
   },
   "bugs": {
     "url": "https://github.com/KevinOrfas/slush-reloader/issues"
@@ -46,5 +46,8 @@
     "front-end",
     "h5bp",
     "gulp"
-  ]
+  ],
+  "devDependencies": {
+    "gulp-load-plugins": "^0.9.0"
+  }
 }
