--- a/templates/package.json
+++ b/templates/package.json
@@ -20,6 +20,7 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
-    "jshint-stylish": "^1.0.1"
+    "jshint-stylish": "^1.0.1",
+    "gulp-load-plugins": "^0.9.0"
   }
 }
