--- a/templates/package.json
+++ b/templates/package.json
@@ -21,6 +21,8 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.1",
-    "gulp-load-plugins": "^0.9.0"
+    "gulp-load-plugins": "^0.9.0",
+	"gulp-filter": "^2.0.2",
+	"gulp-flatten": "0.0.4" 
   }
 }
