--- a/templates/package.json
+++ b/templates/package.json
@@ -23,6 +23,9 @@
     "jshint-stylish": "^1.0.1",
     "gulp-load-plugins": "^0.9.0",
 	"gulp-filter": "^2.0.2",
-	"gulp-flatten": "0.0.4" 
+	"gulp-flatten": "0.0.4",
+    "gulp-useref": "^1.1.1",
+    "gulp-inject": "^1.2.0",
+    "gulp-remove-code": "^1.0.2"
   }
 }
